@@ -3,4 +3,4 @@ Fuser.pm
 MANIFEST
 Makefile.PL
 README
-test.pl
+t/1.t
