@@ -7,3 +7,6 @@ Mon Mar  5 06:54:55 2001
 Wed Nov  7 06:55:38 GMT 2001
         - 1.2 Fixed cut and paste think reported by Shawn Ferris
               added new test.
+
+Thu Mar 17 19:10:38 GMT 2005
+        - 1.3 Added new tests and organized better
